# qdesigns

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: explore_designs.ipynb  mub_d4.qdesign.json  qdesigns_viz.py  visualize_mub.py
src/qdesigns/: __init__.py  _field.py  _galois.py  _io.py  _utils.py  mub.py  qls.py  verify.py
tests/: test_io.py  test_mub.py  test_qls.py
