[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdesigns"
version = "0.1.0"
description = "A verified, machine-readable toolkit for quantum combinatorial designs (MUBs, quantum Latin squares, and more)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Abdul Fatah" }]
keywords = [
    "quantum-information",
    "mutually-unbiased-bases",
    "quantum-latin-squares",
    "combinatorial-designs",
    "quantum-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "black>=24.0"]
examples = ["matplotlib>=3.6", "sympy>=1.11", "jupyterlab>=4.0"]

[project.urls]
Homepage = "https://github.com/fatahjamro/qdesigns"
Repository = "https://github.com/fatahjamro/qdesigns"

[tool.hatch.build.targets.wheel]
packages = ["src/qdesigns"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Notebooks need sys.path setup before importing the package, so imports are
# intentionally not at the top and not isort-ordered.
"*.ipynb" = ["E402", "I001"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
